--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "js-cookie": "^3.0.5",
     "next": "14.1.0",
     "react": "^18",
