--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "js-cookie": "^3.0.5",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^11.0.2",
+    "styled-components": "^6.1.14"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
