--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_BACKEND_API=https://store-management-e2eme0hyfxe3buc9.brazilsouth-01.azurewebsites.net
+REACT_APP_BACKEND_API='https://store-management-e2eme0hyfxe3buc9.brazilsouth-01.azurewebsites.net'
